# librsvg

./: .dockerignore  Cargo.toml  NEWS  deny.toml  meson.build
.github/workflows/: mayhem.yml  sync.yml
devel-docs/: product.rst
doc/: librsvg.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: svg_loader.rs
gdk-pixbuf-loader/: Cargo.toml
gdk-pixbuf-loader/src/: lib.rs
mayhem/: Dockerfile  Mayhemfile_render_document  Mayhemfile_svg_loader  build.sh  config.json  render_document.mayhemfile  svg_loader.mayhemfile  test.sh
mayhem/fuzz/: Cargo.toml
mayhem/fuzz/fuzz_targets/: render_document.rs  svg_loader.rs
rsvg/src/: api.rs  css.rs  document.rs  error.rs  image.rs  lib.rs  limits.rs
rsvg/src/xml/: mod.rs
rsvg/tests/: loading_crash.rs  render_crash.rs
rsvg/tests/fixtures/crash/: mutually-recursive-1.css  mutually-recursive-2.css  recursive.css
